# octo-wildcardmatching-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: linux.yml  mac.yml  windows.yml
cmake/: ConfigOptions.cmake  LoadConanBuildInfo.cmake
include/octo-wildcardmatching-cpp/: wildcard-path-matcher.hpp
src/: wildcard-path-matcher.cpp
unittests/: CMakeLists.txt
unittests/src/: test.cpp  wildcard-path-matcher-tests.cpp
